Sun Jul 27 13:59:51 2003  Joern Thyssen  <jth@gnubg.org>

	* text.c: move all Output* functions to new file format.c	
	(change all callers)
	* format.c, Makefile.am: new file.
	* gnubg.c (DisplayCubeAnalysis, DumpPosition): use 
	OutputCubeAnalysis instead of now deprecated GetCubeActionSz.

Sun Jul 27 12:05:37 2003  Joern Thyssen  <jth@gnubg.org>

	Oops, the html did not validate...

	* html.c (GetStyleGeneral): new function.
	* html.c (HTMLPrintMoveAnalysis): re-fix reentrancy problems.
	* html.c (HTMLPrologue): missing end tag on <link>

Sun Jul 27 11:43:36 2003  Joern Thyssen  <jth@gnubg.org>

	* html.c (HTMLPrintMoveAnalysis): remove some colspans to
	produce better output. Fix reentrancy problem.
	(reported by Joseph)

Sun Jul 27 11:11:33 2003  Joern Thyssen  <jth@gnubg.org>

	Avoid coredump when importing invalid SGG (and others) with
	"set gotofirstgame on"
	(reported by Joseph)

	* import.c: let import routines return -1 indicating errors.
	* gnubg.c: handle returned value from import routines.

Sun Jul 27 01:46:23 2003  Joern Thyssen  <jth@gnubg.org>

	* html.c (CommandExportHTMLImages): render board label pictures
	correctly.

Sun Jul 27 01:20:51 2003  Joern Thyssen  <jth@gnubg.org>

	Update board labels dynamically.

	* gtkboard.c (board_invalidate_labels): new function.
	* gtkboard.c (board_set): invalidate labels if turn has changed.
	* gtkprefs.c (GeneralPage): add option for dynamic labels.
	* renderprefs.c (RenderPrefsParam, RenderPrefsCommand): 
	add option for dynamic labels.
	* render.c (CalculateImages): render labels dynamically based
	on who's on roll.
	* render.c (RenderImages): render images needed for dynamic labels.

Sat Jul 26 22:45:35 2003  Joern Thyssen  <jth@gnubg.org>

	Include Holger's arrows in the html export.

	* htmlimages.c (CommandExportHTMLImages): write images
	with arrows if LIBART is present.
	* html.c (printHTMLBoardGNU): use new images.

Sat Jul 26 18:15:27 2003  Joern Thyssen  <jth@gnubg.org>
