@@ -16,7 +16,7 @@
  * along with this program; if not, write to the Free Software
  * Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA  02111-1307  USA
  *
- * $Id: gnubg.c,v 1.448 2003/07/27 12:28:53 thyssen Exp $
+ * $Id: gnubg.c,v 1.449 2003/07/27 12:45:20 oysteijo Exp $
  */
 
 #include "config.h"
@@ -84,8 +84,6 @@ static char szCommandSeparators[] = " \t\n\r\v\f";
 #include <Python.h>
 #include <gnubgmodule.h>
 #endif
-
-#include <glib/gutils.h>
 
 #include "analysis.h"
 #include "backgammon.h"
@@ -7989,16 +7987,64 @@ basename (const char *filename)
 
 #if ! defined(HAVE_DIRNAME) && ! defined(HAVE_LIBGEN_H)
 
+/*
+ * This code is taken from glibc-2.2, and modified for Windows systems.
+ */
+
 extern char *
-dirname( const char *filename ) {
+dirname (const char *path)
+{
+  static const char dot[] = ".";
+  char *last_slash;
 
-#if __GLIBC__
-    return (char *) g_path_get_dirname( (const gchar *) filename );
-#else
-    int implement_me = 0;
-    assert ( implement_me );
-#endif /* #if __GLIBC__ */
+  /* Find last DIR_SEPARATOR.  */
+  last_slash = path != NULL ? strrchr (path, DIR_SEPARATOR) : NULL;
 
+  if (last_slash != NULL && last_slash != path && last_slash[1] == '\0')
+    {
+      /* Determine whether all remaining characters are slashes.  */
+      char *runp;
+
+      for (runp = last_slash; runp != path; --runp)
+	if (runp[-1] != DIR_SEPARATOR)
+	  break;
+
+      /* The DIR_SEPARATOR is the last character, we have to look further.  */
+      //if (runp != path)
+//	last_slash = __memrchr (path, DIR_SEPARATOR, runp - path);
+    }
+
+  if (last_slash != NULL)
+    {
+      /* Determine whether all remaining characters are slashes.  */
+      char *runp;
+
+      for (runp = last_slash; runp != path; --runp)
+	if (runp[-1] != DIR_SEPARATOR)
+	  break;
+
+      /* Terminate the path.  */
+      if (runp == path)
+	{
+	  /* The last slash is the first character in the string.  We have to
+	     return "/".  As a special case we have to return "//" if there
+	     are exactly two slashes at the beginning of the string.  See
+	     XBD 4.10 Path Name Resolution for more information.  */
+	  if (last_slash == path + 1)
+	    ++last_slash;
+	  else
+	    last_slash = path + 1;
+	}
+
+      last_slash[0] = '\0';
+    }
+  else
+    /* This assignment is ill-designed but the XPG specs require to
+       return a string containing "." in any case no directory part is
+       found and so a static and constant string is required.  */
+    path = (char *) dot;
+
+  return path;
 }
 
 #endif /* ! HAVE_DIRNAME */
@@ -8016,8 +8062,7 @@ Convert ( const char *sz,
 #else
   char *pchIn;
 #endif
-  char *pchOut, *pchDest;
-  int fError = FALSE;
+  char *pchOut, *pchDest;  int fError = FALSE;
 
   if ( ! strcmp ( szSourceCharset, szDestCharset ) )
     /* no need for conversion */
